# otrobopt

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  README.rst  setVersionNumber.sh
.ci_support/: run_docker_linux.sh  run_docker_mingw.sh
.github/workflows/: build.yml  lint.yml
cmake/: FindPythonModule.cmake  OTRobOptConfig.cmake.in  UseOTRobOpt.cmake  cmake_uninstall.cmake.in  escape_backslash_x4.cmake
distro/debian/: README.source  changelog  control  copyright  rules
distro/rpm/: otrobopt.spec
distro/windows/: Makefile  README.txt  installer.nsi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otrobopt/: OTRobOpt.hxx  OTRobOptprivate.hxx
lib/src/: AggregatedMeasure.cxx  CMakeLists.txt  IndividualChanceMeasure.cxx  InverseFORM.cxx  InverseFORMResult.cxx  JointChanceMeasure.cxx  MeanMeasure.cxx  MeanStandardDeviationTradeoffMeasure.cxx  MeasureEvaluation.cxx  MeasureEvaluationImplementation.cxx  MeasureFactory.cxx  MeasureFunction.cxx  MeasureFunctionImplementation.cxx  QuantileMeasure.cxx  RobustOptimizationAlgorithm.cxx  RobustOptimizationProblem.cxx  SequentialMonteCarloRobustAlgorithm.cxx  SubsetInverseSampling.cxx  SubsetInverseSamplingResult.cxx  VarianceMeasure.cxx  WorstCaseMeasure.cxx
lib/src/otrobopt/: AggregatedMeasure.hxx  IndividualChanceMeasure.hxx  InverseFORM.hxx  InverseFORMResult.hxx  JointChanceMeasure.hxx  MeanMeasure.hxx  MeanStandardDeviationTradeoffMeasure.hxx  MeasureEvaluation.hxx  MeasureEvaluationImplementation.hxx  MeasureFactory.hxx  MeasureFunction.hxx  MeasureFunctionImplementation.hxx  QuantileMeasure.hxx  RobustOptimizationAlgorithm.hxx  RobustOptimizationProblem.hxx  SequentialMonteCarloRobustAlgorithm.hxx  SubsetInverseSampling.hxx  SubsetInverseSamplingResult.hxx  VarianceMeasure.hxx  WorstCaseMeasure.hxx
lib/test/: CMakeLists.txt  t_InverseFORM_sphere.cxx  t_InverseFORM_std.cxx  t_MeasureEvaluation_edge.cxx  t_MeasureEvaluation_std.cxx  t_MeasureEvaluation_std.expout  t_MeasureFactory_std.cxx  t_MeasureFunction_std.cxx  t_MeasureFunction_std.expout  t_SequentialMonteCarloRobustAlgorithm_std.cxx  t_SequentialMonteCarloRobustAlgorithm_std.expout  t_SubsetInverseSampling_std.cxx  t_SubsetInverseSampling_std.expout
python/: CMakeLists.txt
python/doc/: conf.py.in  index.rst  math_notations.sty  openturns-objects.txt
python/doc/_static/: custom.css
python/doc/_templates/: MeasureEvaluation.rst_t  class.rst_t
python/doc/architecture/: architecture.rst  class_diagram.xmi
python/doc/developer_guide/: developer_guide.rst
python/doc/developer_guide/architecture/: architecture.rst  class_diagram.xmi
python/doc/developer_guide/validation/: validation.rst
python/doc/examples/: examples.rst  plot_example1.py  plot_example2.py  plot_example3.py  plot_example4.py  plot_inverse_form_cantilever_beam.py  plot_subset_inverse_sampling_R_S.py
python/doc/examples/example1/: example1.rst
python/doc/examples/example2/: example2.rst
python/doc/examples/example3/: example3.rst
python/doc/examples/example4/: example4.rst
python/doc/examples/example5/: example5.rst
python/doc/themes/openturns/: layout.html
python/doc/themes/openturns/static/: openturns.css_t
python/doc/theory/: robust_optimization.rst
python/doc/user_manual/: user_manual.rst
python/doc/validation/: validation.rst
python/src/: AggregatedMeasure.i  AggregatedMeasure_doc.i  AggregatedMeasure_doc.i.in  CMakeLists.txt  IndividualChanceMeasure.i  IndividualChanceMeasure_doc.i  IndividualChanceMeasure_doc.i.in  InverseFORM.i  InverseFORMResult.i  InverseFORMResult_doc.i  InverseFORM_doc.i  InverseFORM_doc.i.in  JointChanceMeasure.i  JointChanceMeasure_doc.i  JointChanceMeasure_doc.i.in  METADATA.in  MeanMeasure.i  MeanMeasure_doc.i  MeanMeasure_doc.i.in  MeanStandardDeviationTradeoffMeasure.i  MeanStandardDeviationTradeoffMeasure_doc.i  MeanStandardDeviationTradeoffMeasure_doc.i.in  MeasureEvaluation.i  MeasureEvaluationImplementation.i  MeasureEvaluationImplementation_doc.i.in  MeasureEvaluation_doc.i  MeasureEvaluation_doc.i.in  MeasureFactory.i  MeasureFactory_doc.i  MeasureFactory_doc.i.in  MeasureFunction.i  MeasureFunctionImplementation.i  MeasureFunctionImplementation_doc.i.in  MeasureFunction_doc.i.in  QuantileMeasure.i  QuantileMeasure_doc.i  QuantileMeasure_doc.i.in  RobustOptimizationAlgorithm.i  RobustOptimizationAlgorithm_doc.i.in  RobustOptimizationProblem.i  (+19 more)
python/test/: CMakeLists.txt  sequential_mc.py  t_InverseFORM_sphere.py  t_InverseFORM_std.py  t_MeasureEvaluation_edge.py  t_MeasureEvaluation_std.expout  t_MeasureEvaluation_std.py  t_MeasureFactory_std.expout  t_MeasureFactory_std.py  t_MeasureFunction_std.expout  t_MeasureFunction_std.py  t_SequentialMonteCarloRobustAlgorithm_examples.expout  t_SequentialMonteCarloRobustAlgorithm_examples.py  t_SequentialMonteCarloRobustAlgorithm_std.expout  t_SequentialMonteCarloRobustAlgorithm_std.py  t_SubsetInverseSampling_R-S.expout  t_SubsetInverseSampling_R-S.py  t_SubsetInverseSampling_Waarts_system_series.expout  t_SubsetInverseSampling_Waarts_system_series.py  t_docstring.expout  t_docstring.py  t_example1.expout  t_example1.py  t_example2.expout  t_example2.py  t_example3.expout  t_example3.py  t_example4.expout  t_example4.py  t_example5.expout  t_example5.py  t_saveload.expout  t_saveload.py
utils/: build_locally.sh  lint.sh  setVersionNumber.sh
